--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       </a>
     </section>
     <nav id="menu"></nav>
+    <div id="scale">
+      <img src="./resources/scale.svg">
+    </div>
     <div id="map"></div>
     <div id="mapInset"></div>
     <div id="story"></div>
