--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       </a>
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.22.1"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.5.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.21.0"></script>
     <script src="./js/config.js"></script>
     <script src="./js/main.js"></script>
   </body>
