--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <br />-->
         <br />
         <div id="vis"></div>
+        <div id="my_dataviz"></div>
       </div>
     </div>
 
@@ -109,6 +110,7 @@
       </a>
     </section>
 
+    <script src="https://d3js.org/d3.v6.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega@5.22.1"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.5.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.21.0"></script>
