Adding table with stats

--- a/index.html
+++ b/index.html
@@ -46,52 +46,15 @@
     <div id="eda-popup" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeEDAPopup()">&times;</a>
       <div class="overlay-content">
+        <h3 id="district-title"></h3>
         <div id="district-selection"></div>
-        <!--<input type="checkbox" id="vehicle1" name="vehicle1">
-        <label for="vehicle1"> Bogotá</label>
-        <input type="checkbox" id="vehicle2" name="vehicle2">
-        <label for="vehicle2"> Antonio Nariño</label>
-        <input type="checkbox" id="vehicle3" name="vehicle3">
-        <label for="vehicle3"> Barrios Unidos</label>
-        <input type="checkbox" id="vehicle1" name="vehicle1">
-        <label for="vehicle1"> Bosa</label>
-        <input type="checkbox" id="vehicle2" name="vehicle2">
-        <label for="vehicle2"> Candelaria</label>
-        <input type="checkbox" id="vehicle3" name="vehicle3">
-        <label for="vehicle3"> Chapinero</label>
-        <input type="checkbox" id="vehicle1" name="vehicle1">
-        <label for="vehicle1"> Ciudad Bolivar</label>
-        <input type="checkbox" id="vehicle2" name="vehicle2">
-        <label for="vehicle2"> Engativá</label>
-        <input type="checkbox" id="vehicle3" name="vehicle3">
-        <label for="vehicle3"> Fontibón</label>
-        <input type="checkbox" id="vehicle1" name="vehicle1">
-        <label for="vehicle1"> Kennedy</label>
         <br />
-        <input type="checkbox" id="vehicle1" name="vehicle1">
-        <label for="vehicle1"> Los Martires</label>
-        <input type="checkbox" id="vehicle2" name="vehicle2">
-        <label for="vehicle2"> Puente Aranda</label>
-        <input type="checkbox" id="vehicle3" name="vehicle3">
-        <label for="vehicle3"> Rafael Uribe Uribe</label>
-        <input type="checkbox" id="vehicle1" name="vehicle1">
-        <label for="vehicle1"> San Cristobal</label>
-        <input type="checkbox" id="vehicle2" name="vehicle2">
-        <label for="vehicle2"> Santa Fé</label>
-        <input type="checkbox" id="vehicle3" name="vehicle3">
-        <label for="vehicle3"> Suba</label>
-        <input type="checkbox" id="vehicle1" name="vehicle1">
-        <label for="vehicle1"> Teusaquillo</label>
-        <input type="checkbox" id="vehicle2" name="vehicle2">
-        <label for="vehicle2"> Tunjuelito</label>
-        <input type="checkbox" id="vehicle3" name="vehicle3">
-        <label for="vehicle3"> Usaquén</label>
-        <input type="checkbox" id="vehicle1" name="vehicle1">
-        <label for="vehicle1"> Usme</label>
-        <br />-->
-        <br />
-        <div id="vis"></div>
+        <div>
+          <table id="district-table">
+          </table>
+        </div>
         <div id="my_dataviz"></div>
+        <em id="kde-description" style="font-size: 11px;"></em>
       </div>
     </div>
 
