Moving photos layer

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <nav id="menu"></nav>
 
     <img id="chart-icon" src="./resources/chart-icon.png"  onclick="openEDAPopup()" />
+
+    <img id="camera-icon" src="./resources/camera.png"  onclick="turnOnPhotosLayer()" />
     
     <div id="scale">
       <img src="./resources/scale.svg">
